<resources>
    <string name="app_name">EstacionApp</string>
    <string name="reservar_ahora_button">Reservar ahora</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="reset_password">Recuperar contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forget_password">¿Olvidaste tú contraseña?</string>
    <string name="forget_password_error">Ocurrió un error al enviar el email</string>
    <string name="forget_password_success">Te enviamos un mail para recuperar tu contraseña</string>
    <string name="empty_fields">Complete los campos</string>
    <string name="empty_email">Complete el email</string>
    <string name="signup_success">Te enviamos un mail para activar tu cuenta</string>
    <string name="signup_error">Ocurrió un error al crear su cuenta</string>
    <string name="login_error">Ocurrió un error al iniciar sesión</string>
    <string name="lugar_libre">Lugar libre</string>
    <string name="lugar_reservado">Lugar reservado</string>
    <string name="cancelar_reserva">Cancelar reserva</string>
    <string name="confirmacion_reserva">Se reservó el lugar indicado!</string>
    <string name="confirmacion_reserva_cancelada">Su reserva ha sido cancelada.</string>
    <string name="logout">Su sesión ha sido cerrada.</string>
    <string name="location_disabled_text">Debes activar la ubicación para poder ver los lugares libres cercanos.</string>
    <string name="location_disabled_title">Ubicación desactivada</string>
    <string name="server_error">Ocurrió un error con el servidor. Intente más tarde.</string>
    <string name="report_success">Su reporte fue cargado.</string>
    <string name="report_error">Falló el reporte. Intente nuevamente.</string>
    <string name="open_nav_drawer">Navigation Drawer open</string>
    <string name="close_nav_drawer">Navigation Drawer closed</string>
    <string name="lugar_no_disponible">Lugar no disponible</string>
    <string name="logout_menu">Logout</string>
    <string name="reportar">Reportar sensor</string>
    <string name="info">INFO</string>
    <string name="app">APP</string>
</resources>